Ajout resource article Turbo frame

--- a/_data/resources.yml
+++ b/_data/resources.yml
@@ -46,3 +46,5 @@
   content: "Trouver son adresse IP"
 - link:    "https://fingerprint.com/demo/"
   content: "Stop fraud, detect bots, or delight customers. Identify good and bad visitors with industry-leading accuracy - even if they're anonymous."
+- link:    "https://saaslit.com/blog/ruby/the-simplest-turbo-frame-example"
+  content: "The simplest turbo-frame example"
